# Fly

./: .gitignore  CMakeLists.txt  Main.qml  main.cpp
QFModule/: CMakeLists.txt  QFInit.hpp
QFModule/Control/: ImageItem.cpp  ImageItem.h  QFButton.qml  QFImgWindow.qml  QFUpload.qml
res/: prt0005_mesh.mesh  shapes.frag  shapes.vert
